add-exports for mockserver